<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_donation_received"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtDonationReceived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_10000"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textVew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donation_target"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtDonationTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_100000"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tetView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fund_percentage"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtFundPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_00"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <TextView
            android:id="@+id/texView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_percentage"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtFoodPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_00"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="48dp"
            android:autofillHints=""
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shelter_percentage"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtShelterPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_00"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txtViw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/education_percentage"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEducationPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_00"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnUpdateRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UPDATE RECORD" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>